test/classes/ferguson/generic-inherit-record3.good
generic-inherit-record3.chpl:12: error: inheritance is not currently supported for records
